--- a/css/elenchi.css
+++ b/css/elenchi.css
@@ -582,6 +582,18 @@ body:not(.bodyStyled2) #chiudiElenco{
 	padding:0px !important;
 	padding-bottom: 1px !important;
 }
+.cartella.overDrag{
+/*	box-shadow:	0px 0px 3px #F60, 0px 0px 3px #F60 !important;
+}
+.smart .cartella.overDrag{*/
+	box-shadow:	0px 0px 7px #F60, 0px 0px 7px #F60 !important;
+}
+.pushDrag_before{
+	margin-top:10px !important;
+}
+.pushDrag_after{
+	margin-bottom:10px !important;
+}
 .cartellaSingoli,
 .cartellaSingoli .trattTools{
 	background-color: #fdebd6 !important;
