--- a/css/menu.css
+++ b/css/menu.css
@@ -1338,14 +1338,14 @@ body:not(.bodyStyled2) #btn_modut{
 	cursor:pointer;
 }
 #p_guide{
-	background-image:url(../img/ico_guidaN.png),url(../img/frDxB.png);
+	background-image:url(../img/m_referenceN.png),url(../img/frDxB.png);
 	cursor:pointer;
 }
 #p_guide:hover{
 	background-color:rgba(255,255,255,0.1);
 }
 .bodyStyled2 #p_guide{
-	background-image:url(../img/ico_guida.png),url(../img/frDx.png);
+	background-image:url(../img/m_reference.png),url(../img/frDx.png);
 }
 #p_notifiche{
 	background-image:url(../img/ico_notificheN.png),url(../img/frDxB.png);
