--- a/sets/auricologia/stili_procedure.css
+++ b/sets/auricologia/stili_procedure.css
@@ -2,7 +2,7 @@
 /* CSS Document */
 
 .dettPunto .numPoints{
-	width: calc(100% - 80px);
+	width: calc(100% - 100px) !important;
 }
 .dettPunto .iProc{
 	display:none !important;
