--- a/sets/meridiani_cinesi/stili.css
+++ b/sets/meridiani_cinesi/stili.css
@@ -515,7 +515,7 @@ body:not(.smart) .listaMeridiani .p_aria:not(.elencoSel) span:hover{
     border-radius: 0px !important;
     /*width: calc(100% - 10px) !important;*/
 	height: 24px !important;
-    margin-bottom: 6px;
+    margin-bottom: 3px;
 	font-style:italic;
 }
 #scheda:not(.sch_Max600) .textPuntoTratt,
@@ -523,11 +523,33 @@ body:not(.smart) .listaMeridiani .p_aria:not(.elencoSel) span:hover{
 	margin-top: 0px !important;
 }
 .textPuntoTratt{
-    width: calc(100% - 216px) !important;
+    width: calc(100% - 213px) !important;
 }
+.smart #scheda:not(.sch_Max450) .textPuntoTratt{
+	width: calc(100% - 282px) !important;
+}
+.touch:not(.smart) #scheda:not(.sch_Max450) .textPuntoTratt{
+	width: calc(100% - 298px) !important;
+}
+
 .textMeridianoTratt{
-    width: calc(100% - 232px) !important;
+    width: calc(100% - 245px) !important;
     margin-left: 5px !important;
+}
+.smart #scheda:not(.sch_Max450) .textMeridianoTratt{
+	width: calc(100% - 256px) !important;
+}
+.touch:not(.smart) #scheda:not(.sch_Max450) .textMeridianoTratt{
+	width: calc(100% - 272px) !important;
+}
+
+.sch_Max450 .textPuntoTratt,
+.sch_Max450 .textMeridianoTratt{
+    width: 100% !important;
+    background-color: rgba(255,255,255,0.4) !important;
+    border-radius: 4px !important;
+	margin-top:4px !important;
+	margin-bottom:0px !important;
 }
 
 #meridianiSmart_ico{
